@@ -21,6 +21,7 @@ Bug fixes:
 	* Fix crash when column or row was added to spreadsheet from toolbar and no column or row was selected (BUG 504839)
 	* Fix issue when the statistics spreadsheet was not shown if the spreadsheet was a child of workbook
 	* Fix issue which caused the context menu of an aspect to not be shown after being reparented
+	* Handle Windows logical font "MS Shell Dlg 2"
 
 -----2.12.0 (2025-04-25) -----
 New features:
